--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -18,5 +18,8 @@
   "background": {
     "scripts": ["background.js"],
     "persistent": false
-  }
+  },
+  "web_accessible_resources": [
+    "quotes.json"
+  ]
 }
